# contextpaste

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: ci.yml  release.yml
scripts/: download-model.sh  generate-icons.js  setup-dev.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: api_client.rs  embeddings.rs  mod.rs  semantic_search.rs
src-tauri/src/clipboard/: classifier.rs  credential_detector.rs  mod.rs  monitor.rs
src-tauri/src/commands/: ai.rs  clipboard.rs  mod.rs  prediction.rs  screenshot.rs  search.rs  settings.rs
src-tauri/src/prediction/: auto_paste.rs  context.rs  context_reader.rs  engine.rs  mod.rs  paste_rules.rs  workflow.rs
src-tauri/src/screenshot/: capture.rs  ocr.rs
src-tauri/src/storage/: database.rs  mod.rs  models.rs  queries.rs
src-tauri/src/tray/: menu.rs
src-tauri/src/utils/: config.rs
src/components/History/: ClipDetail.tsx  FilterBar.tsx  HistoryPanel.tsx
src/components/QuickPaste/: ChainIndicator.tsx  ClipItem.tsx  PredictionIndicator.tsx  QuickPasteOverlay.tsx  SearchBar.tsx  TypeBadge.tsx
src/hooks/: useClipboard.ts  useSearch.ts  useSettings.ts  useShortcut.ts
src/lib/: constants.ts  tauri.ts  types.ts
src/stores/: clipboardStore.ts  settingsStore.ts  uiStore.ts
tests/e2e/: app-launch.spec.ts  history.spec.ts  quick-paste.spec.ts  settings.spec.ts
(+11 files in other folders)
