[package]
name = "contextpaste"
version = "0.3.0"
description = "AI-Powered Smart Clipboard Manager"
authors = ["Thamilvendhan"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "contextpaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
lazy_static = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
sha2 = "0.10"
arboard = "3"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
ndarray = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Accessibility", "Win32_System_Com", "Win32_Foundation", "Win32_System_Ole", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Storage"] }
